# deepin-service-manager

./: .gitignore  CMakeLists.txt  README.md  develop-guide.md  lupdate.sh
.reuse/: dep5
debian/: changelog  control  copyright  deepin-service-dev.install  deepin-service-manager.install  deepin-service-plugin-ipwatchd.install  deepin-service-plugin-oom.install  libdeepin-service-dev.install  postinst  postrm  preinst  prerm  rules
misc/: CMakeLists.txt  com.deepin.dde.ServiceManager.conf  dde-service-manager-session.service  dde-service-manager-system.service  dde-service-manager.desktop  deepin-service-group@.service  deepin-service-group@.service.in  deepin-service-manager-system.service  deepin-service-manager-user.service  deepin-service-manager.service  deepin-service-manager.service.in  deepin-service-manager@.service  deepin-service-plugin-system@.service  deepin-service-plugin-user@.service  deepin-service-plugin@.service  deepin-service-plugin@.service.in  org.deepin.ServiceManager1.conf  org.deepin.service.manager.conf
misc/deepin-debug-config/: org.deepin.service.manager.json
misc/deepin-log-config/: org.deepin.service.manager.json
misc/deepin-service-group@deepin-daemon.service.d/: override.conf.in
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/policy/: policy.cpp  policy.h
src/core/service/: qtdbushook.cpp  qtdbushook.h  servicebase.cpp  servicebase.h  serviceqtdbus.cpp  serviceqtdbus.h  servicesdbus.cpp  servicesdbus.h
src/dde-service-manager/: .gitignore  CMakeLists.txt  dbus_manager.cpp  dbus_manager.h  groupmanager.cpp  main.cpp  manager.json  pluginmanager.cpp  pluginmanager.h  servicemanager.cpp  servicemanager.h  servicemanagerprivate.cpp  servicemanagerprivate.h  servicemanagerpublic.cpp  servicemanagerpublic.h
src/deepin-service-manager/: CMakeLists.txt  graph.h  groupmanager.cpp  groupmanager.h  main.cpp  manager-private.json  manager-public.json  manager.json  pluginloader.cpp  pluginloader.h  pluginloder.cpp  pluginmanager.cpp  pluginmanager.h  servicemanager.cpp  servicemanager.h  servicemanagerprivate.cpp  servicemanagerprivate.h  servicemanagerpublic.cpp  servicemanagerpublic.h  utils.cpp  utils.h
src/deepin-service-manager/manager/: CMakeLists.txt  main.cpp  servicemanager.cpp  servicemanagerprivate.cpp  servicemanagerprivate.h  servicemanagerpublic.cpp  servicemanagerpublic.h
src/deepin-service-manager/plugin-loader/: CMakeLists.txt  main.cpp  pluginmanager.cpp  pluginmanager.h
src/demo/: CMakeLists.txt
src/demo/hook-demo/: CMakeLists.txt  client.cpp  server.cpp  server1.h  server2.h
src/demo/libddeqdbusservice-sdk-demo/: CMakeLists.txt  main.cpp  org.deepin.services.sdk.demo.xml  plugin-qt-demo2.json  sdk-demo.json  service.cpp  service.h
src/demo/libqdbusservice-demo/: CMakeLists.txt  main.cpp  org.deepin.service.sdk.demo.service  sdk-demo.json  service.cpp  service.h
src/demo/plugin-qt/: CMakeLists.txt
src/demo/plugin-qt/demo1/: CMakeLists.txt  plugin-qt-demo1.json  plugin.cpp  service.cpp  service.h
src/demo/plugin-qt/demo2/: CMakeLists.txt  org.deepin.services.demo2a.xml  org.deepin.services.demo2b.xml  plugin-qt-demo2.json  plugin.cpp  service.cpp  service.h
src/demo/plugin-qt/demo2/types/: arealist.cpp  arealist.h
src/demo/plugin-sdbus/: CMakeLists.txt
src/demo/plugin-sdbus/demo1/: CMakeLists.txt  plugin-sdbus-demo1.json  plugin.cpp  service.cpp  service.h
src/libddeqdbusservice/: CMakeLists.txt  ddeqdbusservice.cpp  ddeqdbusservice.h  ddeqdbusserviceprivate.cpp  ddeqdbusserviceprivate.h
src/libqdbusservice/: CMakeLists.txt  qdbusservice.cpp  qdbusservice.h  qdbusservice_p.cpp  qdbusservice_p.h
src/plugin-config/: pluginconfig.cpp  pluginconfig.h
src/plugin-qt/: CMakeLists.txt
src/plugin-qt/OOMScoreAdjust/: CMakeLists.txt  OOM-Score-Adjust.json  org.deepin.service.OOMScoreAdjust.conf  plugin.cpp  service.cpp  service.h
src/plugin-qt/OOMScoreAdjust/configs/: oom-score-adjust.desktop  org.deepin.OOMScoreAdjust.service  org.deepin.service.manager.oom-score-adjust.json
src/plugin-sdbus/: CMakeLists.txt
src/plugin-sdbus/plugin-ipwatchd/: CMakeLists.txt  analyse.c  config.c  devinfo.c  ipwatchd.c  ipwatchd.h  message.c  org.deepin.ipwatchd.conf  plugin-ipwatchd.json  plugin.c  service.c  service.h  signal.c
src/plugin-sdbus/plugin-oom/: CMakeLists.txt  dconfig.c  earlyoom.service.json  getfromqm  lupdate.sh  oom.c  org.deepin.oom.json  service.c
src/plugin-sdbus/plugin-oom/translations/: plugin-oom.ts  plugin-oom_ady.ts  plugin-oom_af.ts  plugin-oom_ak.ts  plugin-oom_am_ET.ts  plugin-oom_ar.ts  plugin-oom_ar_EG.ts  plugin-oom_ast.ts  plugin-oom_az.ts  plugin-oom_bg.ts  plugin-oom_bn.ts  plugin-oom_bo.ts  plugin-oom_bqi.ts  plugin-oom_br.ts  plugin-oom_ca.ts  plugin-oom_cgg.ts  plugin-oom_cs.ts  plugin-oom_da.ts  plugin-oom_de.ts  plugin-oom_de_CH.ts  plugin-oom_el.ts  plugin-oom_en_AU.ts  plugin-oom_en_GB.ts  plugin-oom_en_NO.ts  plugin-oom_en_US.ts  plugin-oom_eo.ts  plugin-oom_es.ts  plugin-oom_es_MX.ts  plugin-oom_et.ts  plugin-oom_eu.ts  plugin-oom_fa.ts  plugin-oom_fi.ts  plugin-oom_fil.ts  plugin-oom_fr.ts  plugin-oom_gl_ES.ts  plugin-oom_he.ts  plugin-oom_hi_IN.ts  plugin-oom_hr.ts  plugin-oom_hu.ts  plugin-oom_hy.ts  (+53 more)
src/plugin/clipboard/: CMakeLists.txt  clipboard_plugin.cpp  clipboard_plugin.h  clipboard_plugin_global.h
src/plugin/clipboard-manager/: CMakeLists.txt  clipboard_manager_plugin.cpp
src/policy/: policy.cpp  policy.h
src/service/: qtdbushook.cpp  qtdbushook.h  servicebase.cpp  servicebase.h  serviceqtdbus.cpp  serviceqtdbus.h  servicesdbus.cpp  servicesdbus.h
tests/: CMakeLists.txt  main.cpp  ut_dbus_manager.cpp
toolGenerate/qdbusxml2cpp/: org.deepin.service.demo2aAdaptor.cpp  org.deepin.service.demo2aAdaptor.h  org.deepin.service.demo2bAdaptor.cpp  org.deepin.service.demo2bAdaptor.h  org.deepin.service.sdk.demoAdaptor.cpp  org.deepin.service.sdk.demoAdaptor.h
